# OSDetect

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml  ci.yml
examples/: main.cpp
include/os_detect/: OSDetect.h
src/: OSDetect.cpp
